dgm-lib v3.1.0
 * `dgm::Controller::readAnalog` no longer returns negative values for negative axii halves
    * One gamepad could've a negative half on up, second could have it on down, it is easier to handle in client code this way
 * `dgm::TextureAtlas` got a convenience `addImage` method

dgm-lib v3.0.0
 * Library target has been renamed to `dgm-lib` and a `dgm::dgm-lib` alias has been added. Use that for linking
 * You can now use `find_package` on a downloaded release to easily link the library. See docs/integration for details
 * You can force dgm-lib to use an external installation / clone of SFML to maintain a consistent version with other libraries. See docs/integration for details
 * `dgm::AppStateConfig` marked as final
 * `dgm::Clip` is now nodiscard and final
 * `dgm::Camera` is now final
 * `dgm::Error` replaces `dgm::ErrorMessage`
    * Contains message and a stacktrace
    * This is a `std::expected` version of `dgm::Exception`
 * `dgm::ResourceManager` has been streamlined
    * `get` and `getMutable` are now throwing so they can return references directly
        * No more `.value().get()` pattern
        * Resource not present is treated as a precondition fail
    * `LoadCallback` now returns `std::expected<T, dgm::Error>` instead of having an inout T parameter
        * Resources no longer have to be default-constructible (yay, RAII), but they have to be movable
        * Two moves are issued per resource load, but that's a price I am willing to pay for RAII
    * `loadResourcesFromDirectory` is no longer recursive because Android NDK is shit
    * All `dgm::Utility::load*` functions have been adjusted
    * `dgm::ParticleSystemInterface` is now explicit
 * Previously deprecated default constructors were removed (`dgm::Clip`, `dgm::TileMap`, `dgm::Path`)
 * Moved `PreallocatedMemoryAmount` from `dgm::DynamicBuffer` template parameters to the constructor parameters
    * Also made the whole thing explicit
 * Added examples