@@ -1,6 +1,7 @@
 dgm-lib v3.1.0
  * `dgm::Controller::readAnalog` no longer returns negative values for negative axii halves
     * One gamepad could've a negative half on up, second could have it on down, it is easier to handle in client code this way
+ * Fixed `dgm::Camera` shaking algoritm so the camera can be moved while being shaked
  * `dgm::TextureAtlas` got a convenience `addImage` method
 
 dgm-lib v3.0.0
